k8s/ai/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skipa-ai
  namespace: skala3-finalproj-class2-team8
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: skipa-ai
  template:
    metadata:
      labels:
        app: skipa-ai
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: skipa-ai
          image: amdp-registry.skala-ai.com/skala26a-ai2/skipa-ai:dev-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
              name: http

          readinessProbe:
            tcpSocket:
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 8001
            initialDelaySeconds: 60
            periodSeconds: 20

          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
