k8s/ai/report-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skipa-ai-report-worker
  namespace: skala3-finalproj-class2-team8
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: skipa-ai-report-worker
  template:
    metadata:
      labels:
        app: skipa-ai-report-worker
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: skipa-ai-report-worker
          image: amdp-registry.skala-ai.com/skala26a-ai2/skipa-ai:dev-latest
          imagePullPolicy: Always
          args:
            - report-worker

          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
