k8s/ai/service.yml
apiVersion: v1
kind: Service
metadata:
  name: skipa-ai
  namespace: skala3-finalproj-class2-team8
spec:
  type: ClusterIP
  selector:
    app: skipa-ai
  ports:
    - name: http
      port: 8001
      targetPort: 8001
