k8s/ai/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skipa-ai-ingress
  namespace: skala3-finalproj-class2-team8
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public-nginx
  tls:
    - hosts:
        - ai-team8-skipa.skala25a.project.skala-ai.com
      secretName: skipa-ai-tls
  rules:
    - host: ai-team8-skipa.skala25a.project.skala-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skipa-ai
                port:
                  number: 8001
